# Bluerov2_Glub

./: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
bluerov2_control/: calibrate_mocap_orientation_correction.py  keyboard_cmd_vel.py  mocap_ekf_odom.py  mpc_hold_position.py  mpc_hold_position_acados.py  mpc_hold_position_acados_real.py  mpc_track_trajectory_acados.py  nav_odom_to_vehicle_odometry.py  offboard_enable.py  offboard_heartbeat_attitude.py  offboard_heartbeat_wrench.py  planner_astar.py  position_control_pid.py  real_wrench_watchdog.py  record_mocap_target_pose.py  stabilized_control.py  stabilized_control_real.py  wasd_teleop.py
bluerov2_control/models/: BlueROV2_wrench.py  di_casadi.py  di_wrench_casadi.py  fossen_bluerov2_model.py  fossen_bluerov2_model_real.py  fossen_casadi.py  koopman_casadi.py
bluerov2_control/models/weights/: double_integrator_wrench_weights.npz  koopman_edmdc_sticks_weights.npz
bluerov2_control/research/: __init__.py  analyze_trial.py  mark_trial_event.py  trial_data_logger.py
bluerov2_mpc/: mpc_node.py  mpc_wrench_node.py  offboard_heartbeat.py  offboard_heartbeat_actuator.py  offboard_heartbeat_wrench.py  pose_vel_pid_node.py  position_control_pid.py  single_int_mpc_node.py  soft_dive_pid.py  test_casadi.py  test_casadi_extended.py  vel_pid_thrust_node.py
bluerov2_mpc/models/: di_ana_wrench_casadi.py  fossen_wrench_casadi.py  koopman_wrench_casadi.py  single_int_pose_casadi.py
bluerov2_mpc/models/weights/: double_integrator_sticks_weights.npz  double_integrator_weights.npz  koopman_edmdc_weights.npz  koopman_edmdc_wrench_weights.npz
experiments/payload_retrieval/: README.md
experiments/payload_retrieval/config/: hooked_box_target_pose_from_ekf_20260706.json  hooked_box_target_pose_mocap.json  hooked_box_target_pose_trial_baseline.json  trial_metadata_template.json
launch/: cascaded_pid_wrench.launch.py  fixed_hook_mpc_june23.launch.py  keyboard_cmd_vel.launch.py  mocap_ekf_odom.launch.py  mpc.launch.py  mpc_hold_position.launch.py  mpc_hold_position_acados.launch.py  mpc_hold_position_acados_real.launch.py  mpc_wrench.launch.py  offboard_enable_real.launch.py  payload_retrieval_data_collection.launch.py  pid_only.launch.py  position_control_pid.launch.py  single_int_mpc_wrench.launch.py  stabilized_control.launch.py  stabilized_control_real.launch.py
