<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bluerov2_control</name>
  <version>0.0.0</version>
  <description>A ROS2 package for running controllers with the PX4 BlueROV2 and the Gazebo simulator.</description>
  <maintainer email="viktornfa@gmail.com">Victor Nan Fernandez-Ayala</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <!-- CasADi is usually pip-installed; list as a note for source builds -->
  <exec_depend>python3-casadi</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>px4_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
